--- a/ghostly/_includes/header.html
+++ b/ghostly/_includes/header.html
@@ -1,19 +1,19 @@
 <header class="site-header" role="banner">
     <h1> {{site.title}} </h1>
-    <!-- {%- assign names = site.pageorder | split: " " -%}
+    {%- assign names = site.pageorder | split: " " -%}
     {%- for name in names -%}
         {%- assign filename = name | replace: names[0],"index" -%}
         {%- assign style = "nav" -%}
         {%- if page.name contains filename -%}
             {%-    assign style = "nav current" -%}
         {%- endif -%}
-         highlight home in nav when viewing homepage category posts 
+         <!-- highlight home in nav when viewing homepage category posts  -->
         {%- if page.url contains "/homepage/" or page.categories[0] == "homepage" -%}
             {%- if name == "home" -%}
                 {%- assign style = "nav current" -%}
             {%- endif -%}
         {%- endif -%}
-        highlight blog in nav when viewing blog category posts
+        <!-- highlight blog in nav when viewing blog category posts -->
         {%- if page.url contains "/blog/" or page.categories[0] == "blog" -%}
             {%- if name == "blog" -%}
                 {%- assign style = "nav current" -%}
@@ -23,5 +23,5 @@
             {{ site.ghostly.itemseparator }}
         {%- endif -%}
         <a class="{{ style }}" href="/{{ filename }}.html">{{ name }}</a>
-    {%- endfor -%} -->
+    {%- endfor -%}
 </header>
