--- a/ghostly/_includes/footer.html
+++ b/ghostly/_includes/footer.html
@@ -1,4 +1,4 @@
-<!-- <footer>
+<footer>
     <div>
         {%- assign socials = site.socialorder | split: " " -%}
         {%- for social in socials-%}
@@ -23,6 +23,6 @@
         {%- if site.mailchimp_username -%}
             Subscribe to my <a href="/subscribe.html" target="_blank">mailing list</a> for updates.
         {%- endif -%}
-        <p>&copy; 2005&mdash;2020 {{ site.author }} {{ site.ghostly.itemseparator }} Powered by <a href="https://jekyllrb.com/">Jekyll</a> using the <a href="https://github.com/jonathanlilly/ghostly">Ghostly</a> theme</p>
+        <p>&copy; 2021 {{ site.author }} {{ site.ghostly.itemseparator }} Powered by <a href="https://jekyllrb.com/">Jekyll</a> using the <a href="https://github.com/jonathanlilly/ghostly">Ghostly</a> theme</p>
     </div>
-</footer> -->
+</footer>
