--- a/ghostly/_sass/ghostly.scss
+++ b/ghostly/_sass/ghostly.scss
@@ -13,7 +13,7 @@ $headeralign:center; $footeralign:center; $bodyalign:justify; $figtitlealign: ce
 //$headeralign:left; $footeralign: center; $bodyalign:left; $figtitlealign: left;
 
 // The ghostly color scheme
-$background:#F8F8FF; $linkcolor:#666666; $deemphasis:#B8B8B8; $accent:#9DC384; 
+$background:#F8F8FF; $linkcolor:#666666; $deemphasis:#B8B8B8; $accent:#61948b; 
 
 // The oceanic color scheme
 // $background:#FCF9FF; $linkcolor:#336699; $deemphasis:#FF9700; $accent:#33AA99; 
