whats in my headphones keith jarrett

--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -21,16 +21,9 @@
     In my undergrad, I played in small-group combos and was the drummer for an <a href="https://www.instagram.com/ems.femmes/">all-femme jazz/funk</a> <a href="https://www.browndailyherald.com/article/2023/02/a-sense-of-belonging-jazz-band-ems-femmes-showcases-musical-talent">group</a>. 
     If you're a jazz musician in the Boston area who's interested in jamming, definitely reach out!
 
-    <!-- <script>
-        var theList = ["The Godfather (1972)", "The Shawshank Redemption (1994)", 'someNameA', 'someNameB', 'someNameC', 'someNameD', 'someNameE'];
-        var randomPick = theList[Math.floor(Math.random() * theList.length)];
-        document.getElementById('movieName').innerHTML = randomPick;
-    </script>
-    <h2 style="text-align:center">
-        Your Movie for Tonight is:<div id='movieName'></div>
-      </h2> -->
+    <br><br>
+    <i>What's in my headphones: <a href="https://www.youtube.com/watch?v=G2RFKpPZcow">Keith Jarrett Trio - Hallucinations</a> (Whisper Not, 1999)</i>
 
-    <!-- <a href="/sfeucht_resume.pdf">test</a> -->
 
 
     <!-- {{ if .Site.Menus.main }}
