--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -2,28 +2,34 @@
     <!-- <div class="homepage-content">
         {{ .Content }}
     </div> -->
-    <div class="about-me">
-    <img src="/legoland.jpg" alt="A picture of Sheridan next to a donkey at Legoland (a Lego donkey).">
-    <h1>Hi, I'm Sheridan. </h1> 
-    <p>I'm a first-year PhD student advised by <a href="https://baulab.info/">David Bau</a> and <a href="https://www.byronwallace.com/">Byron Wallace</a>
+    <div id="about-me">
+    <!-- <img src="/legoland.jpg" alt="A picture of me next to a donkey at Legoland (a Lego one)."> -->
+    <div id="pics-of-me">
+        <img src="/pretzel.png" width="200px" alt="A picture of me with a pretzel I got the one time I went to New York.">
+        <img src="/gigsongreen.JPG" width="400px" alt="Performing with Em's Femmes in undergrad.">
+    </div>
+
+    
+    <h1>"Danny" Feucht (they/them) </h1> 
+    <p>Hello! I'm a first-year PhD student advised by <a href="https://baulab.info/">David Bau</a> and <a href="https://www.byronwallace.com/">Byron Wallace</a>
     at Northeastern University as a Khoury Distinguished Fellow. Before that, I completed my B.S. in Computer Science at Brown University, where I worked with <a href="https://cs.brown.edu/people/epavlick/">Ellie Pavlick</a>
     in the <a href="https://lunar.cs.brown.edu/">LUNAR Lab</a>.</p>
-    <p>I'm interested in <b>taking apart language models</b> in order to figure out how they work. Do neural models "understand" language like humans do? Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page to see an up-to-date list of my work so far.  </p>
-    </div>
+    <p>I'm interested in <b>taking apart language models</b> in order to figure out how they work. Do neural models "understand" concepts like humans do? Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page to see an up-to-date list of my work so far.  </p>
+    
     <!-- <h1>Research</h1>
     <ul>
         <li>asdf</li>
     </ul> -->
 
-    <!-- <h1>Other Things.</h1> -->
-    <br>
     I'm also a jazz drummer, and I tinker in music-making and creative writing. 
-    In my undergrad, I played in small-group combos and was the drummer for an <a href="https://www.instagram.com/ems.femmes/">all-femme jazz/funk</a> <a href="https://www.browndailyherald.com/article/2023/02/a-sense-of-belonging-jazz-band-ems-femmes-showcases-musical-talent">group</a>. 
-    If you're a jazz musician in the Boston area who's interested in jamming, definitely reach out!
+    In my undergrad, I played in small-group combos and was the drummer for an <a href="https://www.browndailyherald.com/article/2023/02/a-sense-of-belonging-jazz-band-ems-femmes-showcases-musical-talent">all-femme jazz/funk group</a>. 
+    If you're a musician in the Boston area who's interested in jamming, definitely reach out.
+
 
     <br><br>
     <i>What's in my headphones: <a href="https://www.youtube.com/watch?v=G2RFKpPZcow">Keith Jarrett Trio - Hallucinations</a> (Whisper Not, 1999)</i>
 
+    </div>
 
 
     <!-- {{ if .Site.Menus.main }}
