add headphones page

--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -10,11 +10,14 @@
     </div>
 
     
-    <h1>"Danny" Feucht (they/them) </h1> 
-    <p>Hello! I'm a first-year PhD student advised by <a href="https://baulab.info/">David Bau</a> and <a href="https://www.byronwallace.com/">Byron Wallace</a>
-    at Northeastern University as a Khoury Distinguished Fellow. Before that, I completed my B.S. in Computer Science at Brown University, where I worked with <a href="https://cs.brown.edu/people/epavlick/">Ellie Pavlick</a>
+    <h1>Sheridan "Danny" Feucht (they/them) </h1> 
+    <p>Hello! I'm a second-year PhD student advised by <a href="https://baulab.info/">David Bau</a> and <a href="https://www.byronwallace.com/">Byron Wallace</a>
+    at Northeastern University. Before that, I completed my B.S. in Computer Science at Brown University, where I worked with <a href="https://cs.brown.edu/people/epavlick/">Ellie Pavlick</a>
     in the <a href="https://lunar.cs.brown.edu/">LUNAR Lab</a>.</p>
-    <p>I'm interested in <b>taking apart language models</b> in order to figure out how they work. Do neural models "understand" concepts like humans do? Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page to see an up-to-date list of my work so far.  </p>
+    <p>I'm interested in <b>taking apart language models</b> in order to figure out how they work.  
+        Do neural models "understand" concepts in a flexible and reusable way? Where is the line between memorization and understanding?
+        Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page 
+        to see an up-to-date list of my work so far.  </p>
     
     <!-- <h1>Research</h1>
     <ul>
@@ -26,8 +29,8 @@
     If you're a musician in the Boston area who's interested in jamming, definitely reach out.
 
 
-    <br><br>
-    <i>What's in my headphones: <a href="https://www.youtube.com/watch?v=G2RFKpPZcow">Keith Jarrett Trio - Hallucinations</a> (Whisper Not, 1999)</i>
+    <br><br> 
+    <i><a href="/headphones">What's in my headphones:</a></i> Only A Fool Would Say That (Steely Dan, 1972)
 
     </div>
 
