quote song title

--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -30,7 +30,7 @@
 
 
     <br><br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> Only A Fool Would Say That (Steely Dan, 1972)
+    <i><a href="/headphones">What's in my headphones:</a></i> "Ventura Highway" (America, 1972)
 
     </div>
 
