--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -14,8 +14,9 @@
     <p>Hello! I'm a second-year PhD student advised by <a href="https://baulab.info/">David Bau</a> and <a href="https://www.byronwallace.com/">Byron Wallace</a>
     at Northeastern University. Before that, I completed my B.S. in Computer Science at Brown University, where I worked with <a href="https://cs.brown.edu/people/epavlick/">Ellie Pavlick</a>
     in the <a href="https://lunar.cs.brown.edu/">LUNAR Lab</a>.</p>
-    <p>I'm interested in <b>taking apart language models</b> in order to figure out how they work.  
-        Do neural models "understand" concepts in a flexible and reusable way? Where is the line between memorization and understanding?
+    <p>I'm interested in interpretability with the goal of understanding the nature of language and thought. 
+        What kinds of representations are neural models <i>actually</i> learning? How does memorization relate to understanding? 
+        What can these models tell us about language, and about the brain, and how can this inform our assumptions of the nature of thought?  
         Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page 
         to see an up-to-date list of my work so far.  </p>
     
