--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -5,8 +5,10 @@
     <div id="about-me">
     <!-- <img src="/legoland.jpg" alt="A picture of me next to a donkey at Legoland (a Lego one)."> -->
     <div id="pics-of-me">
-        <img src="/pretzel.png" width="200px" alt="A picture of me with a pretzel I got the one time I went to New York.">
-        <img src="/gigsongreen.JPG" width="400px" alt="Performing with Em's Femmes in undergrad.">
+        <!-- <img src="/pretzel.png" width="200px" alt="A picture of me with a pretzel I got the one time I went to New York."> -->
+        <!-- <img src="/eclipse.jpg" width="355px" alt="Lab retreat."> -->
+        <img src="/peabodyessex.png" width="355px" alt="">
+        <img src="/liminal.png" width="355px" alt="">
     </div>
 
     
