--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -7,8 +7,8 @@
     <div id="pics-of-me">
         <!-- <img src="/pretzel.png" width="200px" alt="A picture of me with a pretzel I got the one time I went to New York."> -->
         <!-- <img src="/eclipse.jpg" width="355px" alt="Lab retreat."> -->
-        <img src="/peabodyessex.png" width="355px" alt="">
-        <img src="/liminal.png" width="355px" alt="">
+        <img src="/peabodyessex.png" width="355px" alt="Intersections by Anila Quayyum Agha at the Peabody Essex Museum">
+        <img src="/liminal.png" width="355px" alt="This space is liminal as hell....">
     </div>
 
     
