--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -17,7 +17,7 @@
     at Northeastern University. Before that, I completed my B.S. in Computer Science at Brown University, where I worked with <a href="https://cs.brown.edu/people/epavlick/">Ellie Pavlick</a>
     in the <a href="https://lunar.cs.brown.edu/">LUNAR Lab</a>.</p>
     <p>I'm interested in interpretability with the goal of understanding the nature of language and thought. 
-        What kinds of representations are neural models <i>actually</i> learning? How does memorization relate to understanding? 
+        What kinds of representations are neural language models <i>actually</i> learning?
         What can these models tell us about language, and about the brain, and how can this inform our assumptions of the nature of thought?  
         Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page 
         to see an up-to-date list of my work so far.  </p>
