--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -17,8 +17,12 @@
     at Northeastern University. Before that, I completed my B.S. in Computer Science at Brown University, where I worked with <a href="https://cs.brown.edu/people/epavlick/">Ellie Pavlick</a>
     in the <a href="https://lunar.cs.brown.edu/">LUNAR Lab</a>.</p>
     <p>I'm interested in interpretability with the goal of understanding the nature of language and thought. 
-        What kinds of representations are neural language models <i>actually</i> learning?
-        What can these models tell us about language, and about the brain, and how can this inform our assumptions of the nature of thought?  
+        What kinds of representations are neural language models <i>actually</i> learning? 
+        What can these models tell us about how the brain processes language? 
+        I believe that a deeper understanding of 
+        LLM representations may provide us with fundamental insights and challenge our prior assumptions of how language works. 
+        
+        <!-- Can a deeper understanding of these models inform prior assumptions on the nature of thought?   -->
         Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page 
         to see an up-to-date list of my work so far.  </p>
     
