--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -36,7 +36,7 @@
 
 
     <br><br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> "Ventura Highway" (America, 1972)
+    <i><a href="/headphones">What's in my headphones:</a></i> I Can't Help It - Michael Jackson
 
     </div>
 
