update photo, add blackbox pdf

--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -8,7 +8,7 @@
         <!-- <img src="/pretzel.png" width="200px" alt="A picture of me with a pretzel I got the one time I went to New York."> -->
         <!-- <img src="/eclipse.jpg" width="355px" alt="Lab retreat."> -->
         <img src="/peabodyessex.png" width="355px" alt="All the Flowers Are for Me by Anila Quayyum Agha at the Peabody Essex Museum">
-        <img src="/liminal.png" width="355px" alt="This space is liminal as hell....">
+        <img src="/eclipse.jpg" width="355px" alt="Presenting at the Bau lab's eclipse retreat in 2024">
     </div>
 
     
