add october songs

--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -32,11 +32,11 @@
 
     I'm also a jazz drummer, and I tinker in music-making and creative writing. 
     In my undergrad, I played in small-group combos and was the drummer for an <a href="https://www.browndailyherald.com/article/2023/02/a-sense-of-belonging-jazz-band-ems-femmes-showcases-musical-talent">all-femme jazz/funk group</a>. 
-    If you're a musician in the Boston area who's interested in jamming, definitely reach out.
+    I host jams sometimes—if you're a musician in the Boston area who's interested in jamming, definitely reach out.
 
 
     <br><br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=7ci7oJIkP2Q">This one Youtube video</a>
+    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=ABQjT6gDKu0">Dissolved Girl</a> and <a href="https://www.youtube.com/watch?v=OjgVxt-cm3Q">Brainfeeder</a> 
 
     </div>
 
