--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -36,7 +36,7 @@
 
 
     <br><br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=ABQjT6gDKu0">Dissolved Girl</a> and <a href="https://www.youtube.com/watch?v=OjgVxt-cm3Q">Brainfeeder</a> 
+    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=ABQjT6gDKu0">Dissolved Girl</a> and <a href="https://www.youtube.com/watch?v=fS7XPtFTvb8">Beginners Falafel</a> 
 
     </div>
 
