--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -24,18 +24,20 @@
         What kinds of representations are neural language models actually learning? What can these models tell us about language, and about the brain, and how can this inform our assumptions of the nature of thought?
         Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page 
         to see an up-to-date list of my work so far.  </p>
+
     
     <!-- <h1>Research</h1>
     <ul>
         <li>asdf</li>
     </ul> -->
 
-    I'm also a jazz drummer, and I tinker in music-making and creative writing. 
-    In my undergrad, I played in small-group combos and was the drummer for an <a href="https://www.browndailyherald.com/article/2023/02/a-sense-of-belonging-jazz-band-ems-femmes-showcases-musical-talent">all-femme jazz/funk group</a>. 
-    I host jams sometimes—if you're a musician in the Boston area who's interested in jamming, definitely reach out.
+    <p>I'm also a jazz drummer, and I tinker in music-making and creative writing. 
+    <!-- In my undergrad, I played in small-group combos and was the drummer for an <a href="https://www.browndailyherald.com/article/2023/02/a-sense-of-belonging-jazz-band-ems-femmes-showcases-musical-talent">all-femme jazz/funk group</a>.  -->
+    I host jams sometimes—if you're a musician in the Boston area, definitely reach out.</p>
 
+    <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
-    <br><br> 
+    <br> 
     <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=ABQjT6gDKu0">Dissolved Girl</a> and <a href="https://www.youtube.com/watch?v=fS7XPtFTvb8">Beginners Falafel</a> 
 
     </div>
