update song and add new book list

--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -32,7 +32,7 @@
     <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
     <br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=ABQjT6gDKu0">Dissolved Girl</a> and <a href="https://www.youtube.com/watch?v=fS7XPtFTvb8">Beginners Falafel</a> 
+    <i><a href="/headphones">What's in my headphones:</a></i>  <a href="https://www.youtube.com/watch?v=WMDWPH4oKwo">Type Slowly - Pavement</a> and <a href="https://www.youtube.com/watch?v=K14qg9E9SoE">Slowly Typed - Pavement</a>
 
     </div>
 
