changed to ella and louis

--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -29,7 +29,7 @@
     <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
     <br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=WMDWPH4oKwo">Type Slowly - Pavement</a> & <a href="https://www.youtube.com/watch?v=K14qg9E9SoE">Slowly Typed - Pavement</a>
+    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=wiLIV3H0q-Y">Can't We Be Friends - Ella & Louis</a>
 
     </div>
 
