update music and cv

--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -29,7 +29,7 @@
     <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
     <br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=Claf8E18eLs">You're Gonna Make Me Lonesome When You Go - Bob Dylan</a>
+    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=q4KYYRzFUzE">Vampire in the Corner - Magdalena Bay</a>
 
     </div>
 
