--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -24,12 +24,12 @@
 
     <p>I'm also a jazz drummer, and I tinker in music-making and creative writing. 
     <!-- In my undergrad, I played in small-group combos and was the drummer for an <a href="https://www.browndailyherald.com/article/2023/02/a-sense-of-belonging-jazz-band-ems-femmes-showcases-musical-talent">all-femme jazz/funk group</a>.  -->
-    I host jams sometimes—if you're a musician in the Boston area, definitely reach out.</p>
+    If you ever want to do music stuff together, feel free to reach out.</p>
 
     <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
     <br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=q4KYYRzFUzE">Vampire in the Corner - Magdalena Bay</a>
+    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=1XtUK5Boy7o">Sunset - McCoy Tyner</a> (make sure to listen with headphones to hear the bass)
 
     </div>
 
