--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -29,7 +29,7 @@
     <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
     <br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=1XtUK5Boy7o">Sunset - McCoy Tyner</a> (make sure to listen with headphones to hear the warm bass)
+    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=1XtUK5Boy7o">Sunset - McCoy Tyner</a> (make sure to listen with headphones)
 
     </div>
 
