--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -19,16 +19,18 @@
     <p>I do mechanistic interpretability with the goal of understanding how language models represent concepts.
         How do LLMs represent the meaningful parts of language? What kinds of representations do they learn? 
         To what extent do they grasp the structure of human language, and how can this inform basic assumptions of how language works? 
-        Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page 
-        to see an up-to-date list of my work so far.  </p>
-
+        See a list of my publications <a href="/research">here.</a>
+     </p>
+    
+    <!-- <hr> -->
     <p>I'm also a jazz drummer, and I tinker in music-making and creative writing. 
     <!-- In my undergrad, I played in small-group combos and was the drummer for an <a href="https://www.browndailyherald.com/article/2023/02/a-sense-of-belonging-jazz-band-ems-femmes-showcases-musical-talent">all-femme jazz/funk group</a>.  -->
     If you ever want to do music stuff together, feel free to reach out.</p>
 
     <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
-    <br> 
+    <!-- <br>  -->
+    <hr>
     <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=1XtUK5Boy7o">Sunset - McCoy Tyner</a> (make sure to listen with headphones)
 
     </div>
