--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -20,9 +20,9 @@
      </p>
     
     <!-- <hr> -->
-    <p>I'm also a jazz drummer, and I tinker in music-making and creative writing. 
+    <p>I'm also a jazz drummer, and I do a bit of oil painting and creative writing. 
     <!-- In my undergrad, I played in small-group combos and was the drummer for an <a href="https://www.browndailyherald.com/article/2023/02/a-sense-of-belonging-jazz-band-ems-femmes-showcases-musical-talent">all-femme jazz/funk group</a>.  -->
-    If you ever want to do music stuff together, feel free to reach out.</p>
+    If you ever want to do music or art stuff together, feel free to reach out.</p>
 
     <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
