change main photo

--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -8,7 +8,7 @@
         <!-- <img src="/pretzel.png" width="200px" alt="A picture of me with a pretzel I got the one time I went to New York."> -->
         <!-- <img src="/eclipse.jpg" width="355px" alt="Lab retreat."> -->
         <img src="/ferry.jpeg" width="355px" alt="On the ferry to Martha's Vineyard during CBMM 2024 Summer School.">
-        <img src="/eclipse.jpg" width="355px" alt="Presenting at the Bau lab's eclipse retreat in 2024">
+        <img src="/sunshine-banff.png" width="355px" alt="View from Sunshine Village in the Summer in Banff">
     </div>
 
     
