--- a/themes/anubis/layouts/index.html
+++ b/themes/anubis/layouts/index.html
@@ -12,8 +12,8 @@
     </div>
 
     
-    <h1>Sheridan Feucht (they/them) - </h1> 
-    <tt>feucht.s[at]northeastern.edu</tt>
+    <h1>Sheridan Feucht (they/them) </h1> 
+    <tt> ~ feucht.s[at]northeastern.edu</tt>
     <p>Hello! I'm a third-year PhD student advised by <a href="https://baulab.info/">David Bau</a> and <a href="https://www.byronwallace.com/">Byron Wallace</a>
     at Northeastern University. Before that, I completed my B.S. in Computer Science at Brown University, where I worked with <a href="https://cs.brown.edu/people/epavlick/">Ellie Pavlick</a>
     in the <a href="https://lunar.cs.brown.edu/">LUNAR Lab</a>. I'm originally from Calgary, Canada.</p>
